# move-sui

./: Cargo.toml
crates/move-cli/: Cargo.toml
crates/move-cli/src/: lib.rs
crates/move-cli/src/fuzz/: mod.rs  options.rs  project.rs  templates.rs
crates/move-cli/src/fuzz/options/: add.rs  build.rs  check.rs  cmin.rs  coverage.rs  fmt.rs  init.rs  list.rs  run.rs  tmin.rs
crates/move-fuzzer/: Cargo.toml  build.rs  update-libfuzzer.sh
crates/move-fuzzer/libfuzzer/: FuzzerDriver.cpp
crates/move-fuzzer/src/: lib.rs
crates/move-fuzzer/src/run_move/: mod.rs  move_args.rs
