[package]
name = "move-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
default = ["link_libfuzzer"]
link_libfuzzer = []

[dependencies]
arbitrary = "1"
once_cell = "1"
bcs = "0.1.6"
anyhow = "1.0.52"
move-vm-runtime.workspace = true
move-bytecode-verifier.workspace = true
move-core-types.workspace = true
move-vm-types.workspace = true
move-vm-test-utils.workspace = true
move-binary-format.workspace = true
# move-cli.workspace = true
move-package.workspace = true
move-stdlib.workspace = true
move-stdlib-natives.workspace = true